resource/systems_dev_sg.tf
# Security Group definition

# alb security group (for gateway api server)
resource "aws_security_group" "systems-dev-gateway-alb-sg" {
  vpc_id = aws_vpc.systems_dev_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    Name    = "systems-dev-gateway-alb-sg"
    Service = "DEV"
  }    
}

# alb security group (for log server)
resource "aws_security_group" "systems-dev-logserver-alb-sg" {
  vpc_id = aws_vpc.systems_dev_vpc.id

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5601
    to_port     = 5601
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    Name    = "systems-dev-logserver-alb-sg"
    Service = "DEV"
  }    
}
